--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,28 +1,26 @@
 ---
 resources:
-  - name: only-weekdays-at-1pm-pst
-    type: time
-    icon: clock-outline
-    source:
-      #start: 1:00 PM
-      #stop: 1:15 PM
-      days: [Monday, Tuesday, Wednesday, Thursday, Friday]
-      interval: 5m
-      location: America/Los_Angeles
+- name: source-code
+  type: git
+  source:
+    uri: https://github.com/artful-gopher/c3po.git 
+    branch: master
+
+# - name: only-weekdays-at-1pm-pst
+#   type: time
+#   icon: clock-outline
+#   source:
+#     #start: 1:00 PM
+#     #stop: 1:15 PM
+#     days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+#     interval: 5m
+#     location: America/Los_Angeles
 jobs:
   - name: job-send-reminder
     public: true
     plan:
-      - get: only-weekdays-at-1pm-pst
-        trigger: true 
+      # - get: only-weekdays-at-1pm-pst
+      #   trigger: true
+      - get: source-code
       - task: task-send-reminder
-        config:
-          platform: linux
-          image_resource:
-            type: docker-image
-            source:
-              repository: artfulgopher/tobot_env
-              tag: "1.0"
-          run:
-            path: python
-            args: [--version]
+        file: c3po/task-scripts/task.yml
