--- a/task-scripts/task.yml
+++ b/task-scripts/task.yml
@@ -7,12 +7,6 @@ image_resource:
     tag: "1.0"
 
 run:
-  path: ls
-  args: [-lrth]
+  path: env
+  args: []
   
-params:
-  TZ: ((TZ))
-  CHANNEL_ID: ((CHANNEL_ID))
-  SLACK_API_TOKEN: ((SLACK_API_TOKEN))
-  GOOGLE_SHEET_URL: ((GOOGLE_SHEET_URL))
-  SLACK_HANDLE: ((SLACK_HANDLE))
