--- a/pipeline.yml
+++ b/pipeline.yml
@@ -30,3 +30,5 @@ jobs:
           SLACK_API_TOKEN: ((SLACK_API_TOKEN))
           GOOGLE_SHEET_URL: ((GOOGLE_SHEET_URL))
           SLACK_HANDLE: ((SLACK_HANDLE))
+        input_mapping:
+          c3po-files: source-code
