--- a/task-scripts/task.yml
+++ b/task-scripts/task.yml
@@ -6,7 +6,10 @@ image_resource:
     repository: artfulgopher/tobot_env
     tag: "1.0"
 
+inputs:
+- name: c3po-files
+
 run:
   path: /usr/local/bin/python3
-  args: [main.py]
+  args: [c3po-files/main.py]
   
