--- a/pipeline.yml
+++ b/pipeline.yml
@@ -6,21 +6,22 @@ resources:
     uri: https://github.com/artful-gopher/c3po.git 
     branch: master
 
-# - name: only-weekdays-at-1pm-pst
-#   type: time
-#   icon: clock-outline
-#   source:
-#     #start: 1:00 PM
-#     #stop: 1:15 PM
-#     days: [Monday, Tuesday, Wednesday, Thursday, Friday]
-#     interval: 5m
-#     location: America/Los_Angeles
+- name: only-weekdays-at-1pm-pst
+  type: time
+  icon: clock-outline
+  source:
+    #start: 1:00 PM
+    #stop: 1:15 PM
+    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+    interval: 2m
+    location: America/Los_Angeles
+
 jobs:
   - name: job-send-reminder
     public: true
     plan:
-      # - get: only-weekdays-at-1pm-pst
-      #   trigger: true
+      - get: only-weekdays-at-1pm-pst
+        trigger: true
       - get: source-code
       - task: task-send-reminder
         file: source-code/task-scripts/task.yml
