--- a/pipeline.yml
+++ b/pipeline.yml
@@ -6,21 +6,21 @@ resources:
     uri: https://github.com/artful-gopher/c3po.git 
     branch: develop
 
-- name: only-weekdays-at-1pm-pst
-  type: time
-  icon: clock-outline
-  source:
-    start: 12:45 PM
-    stop: 1:00 PM
-    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
-    location: America/Los_Angeles
+#- name: only-weekdays-at-1pm-pst
+#  type: time
+#  icon: clock-outline
+#  source:
+#    start: 12:45 PM
+#    stop: 1:00 PM
+#    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+#    location: America/Los_Angeles
 
 jobs:
   - name: remind-about-TOPair
     public: true
     plan:
-      - get: only-weekdays-at-1pm-pst
-        trigger: true
+      #- get: only-weekdays-at-1pm-pst
+      #  trigger: true
       - get: source-code
       - task: task-send-reminder
         file: source-code/task-scripts/task.yml
@@ -29,6 +29,6 @@ jobs:
           CHANNEL_ID: ((CHANNEL_ID))
           SLACK_API_TOKEN: ((SLACK_API_TOKEN))
           GOOGLE_SHEET_URL: ((GOOGLE_SHEET_URL))
-          SLACK_HANDLE: ((SLACK_WEST_USERGROUP))
+          SLACK_WEST_USERGROUP: ((SLACK_WEST_USERGROUP))
         input_mapping:
           c3po-files: source-code
