--- a/pipeline.yml
+++ b/pipeline.yml
@@ -6,7 +6,7 @@ resources:
     uri: https://github.com/artful-gopher/c3po.git 
     branch: develop
 
-#- name: only-weekdays-at-1pm-pst
+#- name: only-weekdays-at-1245pm-pst
 #  type: time
 #  icon: clock-outline
 #  source:
@@ -15,20 +15,52 @@ resources:
 #    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
 #    location: America/Los_Angeles
 
+#- name: only-weekdays-at-1255pm-pst
+#  type: time
+#  icon: clock-outline
+#  source:
+#    start: 12:55 PM
+#    stop: 1:00 PM
+#    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+#    location: America/Los_Angeles
+
+#- name: only-weekdays-at-355pm-pst
+#  type: time
+#  icon: clock-outline
+#  source:
+#    start: 3:55 PM
+#    stop: 4:00 PM
+#    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+#    location: America/Los_Angeles
+
 jobs:
   - name: remind-about-TOPair
     public: true
     plan:
-      #- get: only-weekdays-at-1pm-pst
+      #- get: only-weekdays-at-1245pm-pst
       #  trigger: true
       - get: source-code
-      - task: task-send-reminder
-        file: source-code/task-scripts/task.yml
+      - task: remind-TOPair
+        file: source-code/task-scripts/remind-TOPair.yml
         params:
           TZ: ((TZ))
           CHANNEL_ID: ((CHANNEL_ID))
           SLACK_API_TOKEN: ((SLACK_API_TOKEN))
           GOOGLE_SHEET_URL: ((GOOGLE_SHEET_URL))
           SLACK_WEST_USERGROUP: ((SLACK_WEST_USERGROUP))
+        input_mapping:
+          c3po-files: source-code
+  - name: ask-about-TO
+    public: true
+    plan:
+      #- get: only-weekdays-at-1255pm-pst
+      #  trigger: true
+      - get: source-code
+      - task: ask-for-TO
+        file: source-code/task-scripts/ask-for-TO.yml
+        params:
+          CHANNEL_ID: ((CHANNEL_ID))
+          SLACK_API_TOKEN: ((SLACK_API_TOKEN))
+          SLACK_EAST_USERGROUP: ((SLACK_EAST_USERGROUP))
         input_mapping:
           c3po-files: source-code
