--- a/pipeline.yml
+++ b/pipeline.yml
@@ -2,27 +2,30 @@
 resources:
 - name: source-code
   type: git
+  icon: github-circle
   source:
     uri: https://github.com/artful-gopher/c3po.git 
     branch: develop
 
-#- name: only-weekdays-at-1245pm-pst
-#  type: time
-#  icon: clock-outline
-#  source:
-#    start: 12:45 PM
-#    stop: 1:00 PM
-#    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
-#    location: America/Los_Angeles
+- name: only-weekdays-at-1245pm-pst
+  type: time
+  icon: clock-outline
+  source:
+    #start: 12:45 PM
+    #stop: 1:00 PM
+    #days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+    interval: 2m
+    location: America/Los_Angeles
 
-#- name: only-weekdays-at-1255pm-pst
-#  type: time
-#  icon: clock-outline
-#  source:
-#    start: 12:55 PM
-#    stop: 1:00 PM
-#    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
-#    location: America/Los_Angeles
+- name: only-weekdays-at-1255pm-pst
+  type: time
+  icon: clock-outline
+  source:
+    #start: 12:55 PM
+    #stop: 1:00 PM
+    #days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+    interval: 4m
+    location: America/Los_Angeles
 
 #- name: only-weekdays-at-355pm-pst
 #  type: time
@@ -37,8 +40,8 @@ jobs:
   - name: remind-about-TOPair
     public: true
     plan:
-      #- get: only-weekdays-at-1245pm-pst
-      #  trigger: true
+      - get: only-weekdays-at-1245pm-pst
+        trigger: true
       - get: source-code
       - task: remind-TOPair
         file: source-code/task-scripts/remind-about-TOPair.yml
@@ -53,8 +56,8 @@ jobs:
   - name: ask-about-TO
     public: true
     plan:
-      #- get: only-weekdays-at-1255pm-pst
-      #  trigger: true
+      - get: only-weekdays-at-1255pm-pst
+        trigger: true
       - get: source-code
       - task: ask-for-TO
         file: source-code/task-scripts/ask-for-TO.yml
