--- a/pipeline.yml
+++ b/pipeline.yml
@@ -7,56 +7,59 @@ resources:
     uri: https://github.com/artful-gopher/c3po.git 
     branch: develop
 
-# - name: only-weekdays-at-1245pm-pst
-#   type: time
-#   icon: clock-outline
-#   source:
-#     #start: 12:45 PM
-#     #stop: 1:00 PM
-#     #days: [Monday, Tuesday, Wednesday, Thursday, Friday]
-#     interval: 2m
-#     location: America/Los_Angeles
-
-- name: only-weekdays-at-1255pm-pst
+- name: only-weekdays-at-1245pm-pst
   type: time
   icon: clock-outline
   source:
-    #start: 12:55 PM
+    #start: 12:45 PM
     #stop: 1:00 PM
     #days: [Monday, Tuesday, Wednesday, Thursday, Friday]
     interval: 2m
     location: America/Los_Angeles
 
-#- name: only-weekdays-at-355pm-pst
-#  type: time
-#  icon: clock-outline
-#  source:
-#    start: 3:55 PM
-#    stop: 4:00 PM
-#    days: [Monday, Tuesday, Wednesday, Thursday, Friday]
-#    location: America/Los_Angeles
+- name: only-weekdays-at-1255pm-pst
+  type: time
+  icon: clock-outline
+  source:
+    start: 12:55 PM
+    stop: 1:00 PM
+    #days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+    interval: 5m
+    location: America/Los_Angeles
+
+- name: only-weekdays-at-355pm-pst
+  type: time
+  icon: clock-outline
+  source:
+    start: 3:55 PM
+    stop: 4:00 PM
+    #days: [Monday, Tuesday, Wednesday, Thursday, Friday]
+    interval: 2m
+    location: America/Los_Angeles
 
 jobs:
-  # - name: remind-about-TOPair
-  #   public: true
-  #   plan:
-  #     - get: only-weekdays-at-1245pm-pst
-  #       trigger: true
-  #     - get: source-code
-  #     - task: remind-TOPair
-  #       file: source-code/task-scripts/remind-about-TOPair.yml
-  #       params:
-  #         TZ: ((TZ))
-  #         CHANNEL_ID: ((CHANNEL_ID))
-  #         SLACK_API_TOKEN: ((SLACK_API_TOKEN))
-  #         GOOGLE_SHEET_URL: ((GOOGLE_SHEET_URL))
-  #         SLACK_WEST_USERGROUP: ((SLACK_WEST_USERGROUP))
-  #       input_mapping:
-  #         c3po-files: source-code
+  - name: remind-about-TOPair
+    public: true
+    plan:
+      - get: only-weekdays-at-1245pm-pst
+        trigger: true
+      - get: source-code
+      - task: remind-TOPair
+        file: source-code/task-scripts/remind-about-TOPair.yml
+        params:
+          TZ: ((TZ))
+          CHANNEL_ID: ((CHANNEL_ID))
+          SLACK_API_TOKEN: ((SLACK_API_TOKEN))
+          GOOGLE_SHEET_URL: ((GOOGLE_SHEET_URL))
+          SLACK_WEST_USERGROUP: ((SLACK_WEST_USERGROUP))
+        input_mapping:
+          c3po-files: source-code
   - name: ask-about-TO
     public: true
     plan:
       - get: only-weekdays-at-1255pm-pst
+        trigger: true
+      - get: only-weekdays-at-355pm-pst
         trigger: true
       - get: source-code
       - task: ask-for-TO
@@ -66,7 +69,5 @@ jobs:
           SLACK_API_TOKEN: ((SLACK_API_TOKEN))
           SLACK_EAST_USERGROUP: ((SLACK_EAST_USERGROUP))
           SLACK_WEST_USERGROUP: ((SLACK_WEST_USERGROUP))
-          SLACK_EMEA_USERGROUP: ((SLACK_EMEA_USERGROUP))
-          SLACK_APJ_USERGROUP: ((SLACK_APJ_USERGROUP))
         input_mapping:
           c3po-files: source-code
